# JiebaTokenizer

./: CMakeLists.txt  README.md  build.sh  demo.cpp
data/: symbols.unicode.txt
data/default/: emoji.unicode.txt  emoji.utf8.txt  mn.unicode.txt  puncs.unicode.txt  puncs.utf8.txt
data/dict/: id.dict.utf8  my.dict.utf8  ph.dict.utf8  thai.dict.utf8  vn.dict.utf8
src/: CMakeLists.txt  dict_trie.cpp  dict_trie.h  make_unique.h  mm_segment.cpp  mm_segment.h  mp_segment.cpp  mp_segment.h  nlp_stringutil.cpp  nlp_stringutil.h  normalizer.cpp  normalizer.h  segment_base.h  separator_iterator.h  text_analyzer.cpp  text_analyzer.h  trie.cpp  trie.h  unicode.cpp  unicode.h
